fix issues: remove useless variables and comments